--- a/data/configs/genomic_region_generator_ensemble.yaml
+++ b/data/configs/genomic_region_generator_ensemble.yaml
@@ -12,14 +12,15 @@ source_params:
   annotation_release: current # required: release number of annotation, e.g. 'release-108' or 'current' to use most recent annotation release. Check out release numbers for ensemble at ftp.ensembl.org/pub/
 
 ### Parameters for sequences generation
-# List of genomic regions that should be generated, set the genomic regions you want to generate to True
+# List of genomic regions that should be generated, set the genomic regions you want to generate to true
 genomic_regions:
   gene: false
+  intergenic: false
   exon: true
-  exon_exon_junction: true
+  exon_exon_junction: false
+  utr: false
   cds: false
   intron: false
-  utr: flase
 
 # If exon_exon_junction is ste to true, specify the block size, i.e. +/- "block_size" bp around the junction
 # Hint: it does not make sense to set the block size larger than the maximum oligo length
