change attribute name

--- a/data/configs/genomic_region_generator_custom.yaml
+++ b/data/configs/genomic_region_generator_custom.yaml
@@ -18,13 +18,13 @@ source_params:
 ### Parameters for sequences generation
 # List of genomic regions that should be generated, set the genomic regions you want to generate to true
 genomic_regions:
-  gene: false
-  intergenic: false
+  gene: true
+  intergenic: true
   exon: true
-  exon_exon_junction: false
-  utr: false
-  cds: false
-  intron: false
+  exon_exon_junction: true
+  utr: true
+  cds: true
+  intron: true
 
 # If exon_exon_junction is ste to true, specify the block size, i.e. +/- "block_size" bp around the junction
 # Hint: it does not make sense to set the block size larger than the maximum oligo length
