--- a/tests/data/configs/genomic_region_generator_custom.yaml
+++ b/tests/data/configs/genomic_region_generator_custom.yaml
@@ -3,26 +3,28 @@
 #######################
 
 ### General parameters
-dir_output: output_genomic_region_generator_custom # name of the directory where the output files will be written
+dir_output: tmp_output_genomic_region_generator_custom # name of the directory where the output files will be written
 
 ### Parameters for genome and gene annotation
 source: custom # required: indicate that own annotation should be used
 source_params:
-  file_annotation: data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
-  file_sequence: data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
+  file_annotation: tests/data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
+  file_sequence: tests/data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
   files_source: NCBI # optional: original source of the genomic files
   species: Homo_sapiens # optional: species of provided annotation, leave empty if unknown
   annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
   genome_assembly: GRCh38 # optional: genome assembly of provided annotation, leave empty if unknown
 
 ### Parameters for sequences generation
-# List of genomic regions that should be generated, set the genomic regions you want to generate to True
+# List of genomic regions that should be generated, set the genomic regions you want to generate to true
 genomic_regions:
-  gene: false
+  gene: true
+  intergenic: true
   exon: true
   exon_exon_junction: true
-  cds: false
-  intron: false
+  utr: true
+  cds: true
+  intron: true
 
 # If exon_exon_junction is ste to true, specify the block size, i.e. +/- "block_size" bp around the junction
 # Hint: it does not make sense to set the block size larger than the maximum oligo length
