--- a/data/configs/oligo_seq_probe_designer.yaml
+++ b/data/configs/oligo_seq_probe_designer.yaml
@@ -10,11 +10,7 @@ write_intermediate_steps: true # writes the oligo sequences after each step of t
 
 ### Parameters for oligo sequences generation
 ### -----------------------------------------------
-<<<<<<< HEAD
-file_regions: data/genes/custom_3.txt # file with a list the genes used to generate the oligos sequences, leave empty if all the genes are used
-=======
 file_regions: data/genes/custom_10.txt # file with a list the genes used to generate the oligos sequences, leave empty if all the genes are used
->>>>>>> origin/pipelines
 files_fasta_oligo_database: # fasta file with sequences form which the oligos should be generated. Hint: use the genomic_region_generator pipeline to create fasta files of genomic regions of interest
   - data/genomic_regions/exon_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
   - data/genomic_regions/exon_exon_junction_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
@@ -27,11 +23,7 @@ targeted_exons:
 oligo_isoform_consensus: 0 #min isoform consesnsus for oligos, i.e. how many transcripts of the total number of transcripts of a gene are covered by the oligo, given in %
 split_region: 4 #Minimum number of bases covering the exon junction, i.e. the oligo should contain at least x bases upstream/downstream of the junction.
 
-<<<<<<< HEAD
-### Parameters for the property filers
-=======
 ### Parameters for the property filters
->>>>>>> origin/pipelines
 ### -----------------------------------------------
 ## oligo sequence
 GC_content_min: 45 # minimum GC content of oligos
@@ -104,6 +96,8 @@ hybridization_probability_bowtie_hit_parameters: # No hit parameters available c
 ### Parameters for the Oligo set selection
 ### -----------------------------------------------
 max_graph_size: 5000
+n_attempts: 1000 # number of attempts to find the optimal set of oligos
+pre_filtering: false # if true, runs a pre-filtering step to reduce the number of oligos that are taken into consideration in the oligo set selection. This step is recommended for oligo sets with more than 10 oligos.
 
 ### Parameters for Melting Temperature
 ### -----------------------------------------------
